--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.8.2</version>
+		<version>1.8.2-SNAPSHOT</version>
 		<relativePath>org.testeditor.fixture.parent</relativePath>
 	</parent>
 
@@ -16,8 +17,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/test-editor/fixtures</developerConnection>
-	  <tag>core-1.8.2</tag>
-  </scm>
+	</scm>
 
 	<modules>
 		<module>org.testeditor.fixture.parent</module>
