--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.8.2</version>
+		<version>1.8.3-SNAPSHOT</version>
 		<relativePath>org.testeditor.fixture.parent</relativePath>
 	</parent>
 
@@ -16,7 +16,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/test-editor/fixtures</developerConnection>
-	  <tag>core-1.8.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<modules>
