[TE-283] deployment of build-core and build-all prevented

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,6 +24,10 @@
 		<module>org.testeditor.fixture.core</module>
 	</modules>
 
+	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
