[TE-283] path of checkstyle.xml corrected

--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -50,7 +50,7 @@
 		<java.version>1.7</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
-		<checkstyle-config>${rootPath}/checkstyle.xml</checkstyle-config>
+		<checkstyle-config>${rootPath}/org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
 		<bintray.repo>test-editor/Fixtures</bintray.repo>
 		<bintray.package>core-fixture</bintray.package>
 		<junit.version>4.12</junit.version>
