--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<name>${project.groupId}:${project.artifactId}</name>
 
 	<modules>
+		<module>build</module>
 		<module>core</module>
 	</modules>
 
