[TE-283] UTF-8 source encoding added

--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -179,7 +179,7 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<configLocation>checkstyle.xml</configLocation>
+					<configLocation>${checkstyle-config}</configLocation>
 					<sourceDirectory>${project.basedir}/src</sourceDirectory>
 				</configuration>
 			</plugin>
