--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
 
 	<properties>
 		<maven.deploy.skip>true</maven.deploy.skip>
-	</properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
