--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -57,7 +57,6 @@
 		<log4j.version>1.2.17</log4j.version>
 		<fitnesse.version>20121220</fitnesse.version>
 		<maven.compiler.version>3.2</maven.compiler.version>
-		<maven.releaseplugin.version>2.5.2</maven.releaseplugin.version>
 		<maven.sourceplugin.version>2.4</maven.sourceplugin.version>
 		<maven.javadocplugin.version>2.10.3</maven.javadocplugin.version>
 		<jacoco.version>0.7.2.201409121644</jacoco.version>
@@ -88,7 +87,7 @@
 	<distributionManagement>
 		<repository>
       <id>bintray</id>
-      <url>https://api.bintray.com/content/${bintray.repo}/${bintray.package}/;publish=1</url>
+      <url>https://api.bintray.com/content/${bintray.repo}/${bintray.package};publish=1</url>
 		</repository>
 		<snapshotRepository>
       <id>snapshots</id>
@@ -107,14 +106,6 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>${maven.releaseplugin.version}</version>
-					<configuration>
-						<autoVersionSubmodules>true</autoVersionSubmodules>
 					</configuration>
 				</plugin>
 			</plugins>
