[TE-283] correct bintray api url and configure maven scm plugin

--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -51,12 +51,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 		<checkstyle-config>checkstyle.xml</checkstyle-config>
+		<bintray.subject>srvte</bintray.subject>
 		<bintray.repo>test-editor/Fixtures</bintray.repo>
 		<bintray.package>core-fixture</bintray.package>
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<fitnesse.version>20121220</fitnesse.version>
 		<maven.compiler.version>3.2</maven.compiler.version>
+		<maven.scmplugin.version>1.9.4</maven.scmplugin.version>
 		<maven.sourceplugin.version>2.4</maven.sourceplugin.version>
 		<maven.javadocplugin.version>2.10.3</maven.javadocplugin.version>
 		<jacoco.version>0.7.2.201409121644</jacoco.version>
@@ -87,7 +89,7 @@
 	<distributionManagement>
 		<repository>
       <id>bintray</id>
-      <url>https://api.bintray.com/content/${bintray.repo}/${bintray.package};publish=1</url>
+      <url>https://api.bintray.com/maven/${bintray.subject}/${bintray.repo}/${bintray.package};publish=1</url>
 		</repository>
 		<snapshotRepository>
       <id>snapshots</id>
@@ -190,6 +192,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-scm-plugin</artifactId>
+			    <version>${maven.scmplugin.version}</version>
+			    <configuration>
+				    <tag>${project.version}</tag>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
