--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -53,7 +53,7 @@
 		<checkstyle-config>checkstyle.xml</checkstyle-config>
 		<bintray.subject>srvte</bintray.subject>
 		<bintray.repo>test-editor/Fixtures</bintray.repo>
-		<bintray.package>core-fixture</bintray.package>
+		<bintray.package>parent</bintray.package>
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<fitnesse.version>20121220</fitnesse.version>
