--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,6 +27,7 @@
 	<properties>
 		<maven.deploy.skip>true</maven.deploy.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <checkstyle-config>${basedir}/../org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
     </properties>
 
 </project>
