[TE-283] checkstyle execution now is moved to core

--- a/core/org.testeditor.fixture.core/pom.xml
+++ b/core/org.testeditor.fixture.core/pom.xml
@@ -20,4 +20,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
