--- a/core/org.testeditor.fixture.core/pom.xml
+++ b/core/org.testeditor.fixture.core/pom.xml
@@ -18,6 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <checkstyle-config>${basedir}/../org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
 	</properties>
 
     <build>
