[TE-283] scm tag configured

--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -213,7 +213,7 @@
                     <artifactId>maven-scm-plugin</artifactId>
                     <version>${maven.scmplugin.version}</version>
                     <configuration>
-                        <tag>${project.version}</tag>
+                        <tag>parent-${project.version}</tag>
                     </configuration>
                 </plugin>
 			</plugins>
