--- a/swing/pom.xml
+++ b/swing/pom.xml
@@ -2,157 +2,78 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.testeditor.fixture</groupId>
+
+	<parent>
+		<groupId>org.testeditor.fixture</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.8.2-SNAPSHOT</version>
+		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
+	</parent>
+
 	<artifactId>swing-fixture</artifactId>
 	<version>1.8.0</version>
 	<packaging>jar</packaging>
+
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Fixture used for testing SWING applications.</description>
 	<url>http://testeditor.org</url>
 
-	<licenses>
-		<license>
-			<name>Eclipse Public License Version 1.0</name>
-			<url>http://www.eclipse.org/legal/epl-v10.html</url>
-		</license>
-	</licenses>
-
-	<developers>
-		<developer>
-			<name>Karsten Panier</name>
-			<email>kpanier@aysada.org</email>
-			<organization>Test-Editor</organization>
-			<organizationUrl>http://www.testeditor.org</organizationUrl>
-		</developer>
-		<developer>
-			<name>Matthias Holsten</name>
-			<email>matthias.holsten@gmail.com</email>
-			<organization>Test-Editor</organization>
-			<organizationUrl>http://www.testeditor.org</organizationUrl>
-		</developer>
-		<developer>
-			<name>Koray Bayraktar</name>
-			<email>koray.bayraktar@akquinet.de</email>
-			<organization>Test-Editor</organization>
-			<organizationUrl>http://www.testeditor.org</organizationUrl>
-		</developer>
-		<developer>
-			<name>Orhan Polat</name>
-			<email>orhan.polat@akquinet.de</email>
-			<organization>Test-Editor</organization>
-			<organizationUrl>http://www.testeditor.org</organizationUrl>
-		</developer>
-	</developers>
-
-	<scm>
-		<connection>scm:git:https://github.com/test-editor/fixtures</connection>
-		<developerConnection>scm:git:https://github.com/test-editor/fixtures</developerConnection>
-		<url>https://github.com/test-editor/fixtures</url>
-	</scm>
-
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<checkstyle-config>${basedir}/../core/org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
+		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
+		<core.fixture.version>${parent.version}</core.fixture.version>
+		<fest.swing.version>1.2.1</fest.swing.version>
+		<fest.assert.version>1.4</fest.assert.version>
+		<fest.reflect.version>1.2</fest.reflect.version>
+		<GeburtstagsListenVerwaltung.version>1.0</GeburtstagsListenVerwaltung.version>
+		<GeburtstagsListenVerwaltung.path>${project.basedir}/src/test/resources/GeburtstagsListenVerwaltung-1.0-jar-with-dependencies.jar</GeburtstagsListenVerwaltung.path>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.testeditor.fixture</groupId>
-			<artifactId>core-fixture</artifactId>
-			<version>1.8.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-swing</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-assert</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-reflect</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>de.akquinet.birthday</groupId>
-			<artifactId>GeburtstagsListenVerwaltung</artifactId>
-			<version>1.0</version>
-			<systemPath>${project.basedir}/src/test/resources/GeburtstagsListenVerwaltung-1.0-jar-with-dependencies.jar</systemPath>
-			<scope>system</scope>
-		</dependency>
-	</dependencies>
-	
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-	
-	<profiles>
-		<profile> 
-			<id>dev</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>		
-		</profile>
-		<profile> 
-			<id>snapshot</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.5</version>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>false</autoReleaseAfterClose>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile> 
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.5</version>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>${maven.dependency.plugin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.testeditor.fixture</groupId>
+				<artifactId>core-fixture</artifactId>
+				<version>${core.fixture.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.easytesting</groupId>
+				<artifactId>fest-swing</artifactId>
+				<version>${fest.swing.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.easytesting</groupId>
+				<artifactId>fest-assert</artifactId>
+				<version>${fest.assert.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.easytesting</groupId>
+				<artifactId>fest-reflect</artifactId>
+				<version>${fest.reflect.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>de.akquinet.birthday</groupId>
+				<artifactId>GeburtstagsListenVerwaltung</artifactId>
+				<version>${GeburtstagsListenVerwaltung.version}</version>
+				<systemPath>${GeburtstagsListenVerwaltung.path}</systemPath>
+				<scope>system</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+			</plugin>
+
 			<!-- copy all jars to libs folder -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -174,90 +95,30 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>			
-			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.6.2.201302030002</version>
-				<configuration>
-					<includes>
-						<include>*</include>
-					</includes>
-					<destFile>${project.basedir}/target/jacoco.exec</destFile>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.9.1</version>
-				<configuration>
-					<sourceDirectory>${project.basedir}/src</sourceDirectory>
-					<configLocation>${project.basedir}/checkstyle.xml
-					</configLocation>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<findbugsXmlOutput>true</findbugsXmlOutput>
-					<failOnError>false</failOnError>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.testeditor.fixture</groupId>
+			<artifactId>core-fixture</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-swing</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-reflect</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>de.akquinet.birthday</groupId>
+			<artifactId>GeburtstagsListenVerwaltung</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
