[TE-283] new snapshot version

--- a/swing/pom.xml
+++ b/swing/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>swing-fixture</artifactId>
-	<version>1.8.0</version>
+	<version>1.8.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
