--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>core</module>
         <module>swing</module>
         <module>soap</module>
+        <module>rest</module>
 	</modules>
 
 	<properties>
