--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,7 +21,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<checkstyle-config>${basedir}/../core/org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
 		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
-		<core.fixture.version>${parent.version}</core.fixture.version>
+		<core.fixture.version>${project.parent.version}</core.fixture.version>
         <selenium.java.version>2.35.0</selenium.java.version>
         <mockito.all.version>1.9.5-rc1</mockito.all.version>
         <selenium.server.version>2.36.0</selenium.server.version>
