[TE-283] setting of groupId in child pom cause of bug in maven versions plugin (will be fixed in version 2.3 which has not been released yet)

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,6 +10,7 @@
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 
+	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>web-fixture</artifactId>
 	<version>2.1.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
