--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.0-SNAPSHOT</version>
+		<version>2.5.0</version>
 		<relativePath>org.testeditor.fixture.parent</relativePath>
 	</parent>
 
