--- a/soap/pom.xml
+++ b/soap/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.8.2-SNAPSHOT</version>
+		<version>2.5.0</version>
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 
