--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -20,6 +20,7 @@
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <checkstyle-config>${basedir}/../core/org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
+		<bintray.package>rest-fixture</bintray.package>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
         <core.fixture.version>${parent.version}</core.fixture.version>
     </properties>
