--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>web-fixture</artifactId>
-	<version>2.5.0</version>
+	<version>2.5.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Fixture used for testing WEB applications.</description>
