--- a/soap/pom.xml
+++ b/soap/pom.xml
@@ -23,7 +23,7 @@
         <checkstyle-config>${basedir}/../core/org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
 		<bintray.package>soap-fixture</bintray.package>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
-        <core.fixture.version>${parent.version}</core.fixture.version>
+        <core.fixture.version>${project.parent.version}</core.fixture.version>
 		<cxf.version>2.2.3</cxf.version>
 		<spring.version>3.1.2.RELEASE</spring.version>
 		<guava.version>13.0</guava.version>
