--- a/swing/pom.xml
+++ b/swing/pom.xml
@@ -24,7 +24,7 @@
 		<checkstyle-config>${basedir}/../core/org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
 		<bintray.package>swing-fixture</bintray.package>
 		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
-		<core.fixture.version>${parent.version}</core.fixture.version>
+		<core.fixture.version>${project.parent.version}</core.fixture.version>
 		<fest.swing.version>1.2.1</fest.swing.version>
 		<fest.assert.version>1.4</fest.assert.version>
 		<fest.reflect.version>1.2</fest.reflect.version>
