--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.1-SNAPSHOT</version>
+		<version>2.5.0</version>
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>rest-fixture</artifactId>
-	<version>2.5.0-SNAPSHOT</version>
+	<version>2.5.0</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Fixture used for testing REST applications.</description>
