[TE-283] deployment of parent to different bintray package

--- a/core/org.testeditor.fixture.core/pom.xml
+++ b/core/org.testeditor.fixture.core/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <checkstyle-config>${basedir}/../org.testeditor.fixture.parent/checkstyle.xml</checkstyle-config>
+        <bintray.package>core-fixture</bintray.package>
 	</properties>
 
     <build>
