--- a/swing/pom.xml
+++ b/swing/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>swing-fixture</artifactId>
-	<version>2.5.0</version>
+	<version>2.5.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
